# curriculum_training

./: .gitignore  README.md  analysis_curriculum_results.md  differences_vs_upstream.md  implementation.md  research_findings.md
src/: .gitignore  README.md  pyproject.toml
src/configs/: ppo.yaml  task_space.yaml
src/configs/curricula/: task_specific.yaml  teacher_guided.yaml  uniform.yaml
src/results/: epte_sp.csv  run_timings.txt
src/results/eval_traces/: task_specific_seed0.npz  task_specific_seed1.npz  task_specific_seed2.npz  teacher_seed0.npz  teacher_seed1.npz  teacher_seed2.npz  uniform_seed0.npz  uniform_seed1.npz  uniform_seed2.npz
src/results/figures/: convergence.txt
src/scripts/: eval_epte.py  play.py  play_per_bin.sh  plot_all.py  run_sweep.sh  train.py
src/source/curriculum_rl/: pyproject.toml
src/source/curriculum_rl/config/: extension.toml
src/source/curriculum_rl/curriculum_rl/: __init__.py
src/source/curriculum_rl/curriculum_rl/curricula/: __init__.py  base.py  task_specific.py  teacher_guided.py  uniform.py
src/source/curriculum_rl/curriculum_rl/envs/: __init__.py  commands.py  go2_velocity_base.py  go2_velocity_task_specific.py  go2_velocity_teacher_guided.py  go2_velocity_uniform.py  mdp.py
src/source/curriculum_rl/curriculum_rl/eval/: __init__.py  epte_sp.py  iterations_to_mastery.py  per_bin_return.py  sampling_heatmap.py  training_time.py
src/source/curriculum_rl/curriculum_rl/figures/: __init__.py  _util.py  plot_action_rate.py  plot_convergence.py  plot_epte_bars.py  plot_epte_violin.py  plot_gait_diagram.py  plot_gait_metrics.py  plot_iterations_to_mastery.py  plot_joint_kinematics.py  plot_learning_curves.py  plot_sampling_heatmap.py  plot_sampling_heatmap_3d.py  plot_survival.py  plot_v_actual_vs_cmd.py  plot_v_trace_per_bin.py  render_system_diagram.py
(+9 files in other folders)
